--- a/views/views.xml
+++ b/views/views.xml
@@ -1,60 +1,63 @@
 <odoo>
   <data>
     <!-- explicit list view definition -->
-    <!--
-    <record model="ir.ui.view" id="lol.list">
-      <field name="name">lol list</field>
-      <field name="model">lol.lol</field>
+    
+    <record model="ir.ui.view" id="lol.list_roles">
+      <field name="name">rol list</field>
+      <field name="model">lol.rol</field>
       <field name="arch" type="xml">
         <tree>
           <field name="name"/>
-          <field name="value"/>
-          <field name="value2"/>
+          <field name="description"/>
+          <field name="campeones"/>
         </tree>
       </field>
     </record>
-    -->
 
-    <!-- actions opening views on models -->
-    <!--
-    <record model="ir.actions.act_window" id="lol.action_window">
-      <field name="name">lol window</field>
-      <field name="res_model">lol.lol</field>
-      <field name="view_mode">tree,form</field>
-    </record>
-    -->
-
-    <!-- server action to the one above -->
-    <!--
-    <record model="ir.actions.server" id="lol.action_server">
-      <field name="name">lol server</field>
-      <field name="model_id" ref="model_lol_lol"/>
-      <field name="state">code</field>
-      <field name="code">
-        action = {
-          "type": "ir.actions.act_window",
-          "view_mode": "tree,form",
-          "res_model": self._name,
-        }
+    <record model="ir.ui.view" id="lol.list_campeones">
+      <field name="name">champion list</field>
+      <field name="model">lol.campeones</field>
+      <field name="arch" type="xml">
+        <tree>
+          <field name="name"/>
+          <field name="description"/>
+          <field name="fecha"/>
+          <field name="idrol"/>
+        </tree>
       </field>
     </record>
-    -->
+    
+
+    <!-- actions opening views on models -->
+
+    <record model="ir.actions.act_window" id="lol.action_roles">
+      <field name="name">Roles</field>
+      <field name="res_model">lol.rol</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
+    <record model="ir.actions.act_window" id="lol.action_campeones">
+      <field name="name">Campeones</field>
+      <field name="res_model">lol.campeones</field>
+      <field name="view_mode">tree,form</field>
+    </record>
+
 
     <!-- Top menu item -->
-    <!--
-    <menuitem name="lol" id="lol.menu_root"/>
-    -->
+    
+    <menuitem name="LoL" id="lol.menu_root"/>
+    
     <!-- menu categories -->
-    <!--
-    <menuitem name="Menu 1" id="lol.menu_1" parent="lol.menu_root"/>
-    <menuitem name="Menu 2" id="lol.menu_2" parent="lol.menu_root"/>
-    -->
+    
+    <menuitem name="General" id="lol.menu" parent="lol.menu_root"/>
+    
+    
     <!-- actions -->
-    <!--
-    <menuitem name="List" id="lol.menu_1_list" parent="lol.menu_1"
-              action="lol.action_window"/>
-    <menuitem name="Server to list" id="lol" parent="lol.menu_2"
-              action="lol.action_server"/>
-    -->
+    
+    <menuitem name="Roles" id="lol.menuRoles" parent="lol.menu"
+              action="lol.action_roles"/>
+    <menuitem name="Campeones" id="lol" parent="lol.menuCampeones"
+              action="lol.action_campeones"/>
+    
   </data>
 </odoo>
